[tool.poetry]
name = "gen3utils"
version = "0.8.4"
description = "Gen3 Library Template"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/gen3utils"
include = [
  "CHANGELOG.md",
  "NOTICE",
]

[tool.poetry.dependencies]
python = "^3.9"
cdislogging = "~=1.0.0"
click = "*"
dictionaryutils = "~3.0.0"
gen3datamodel = "~3.0.0"
gen3dictionary = "~2.0.1"
gen3git = ">=0.7.0,<1.0.0"
packaging = "~20.0"
psqlgraph = "~3.0"
pyyaml = "~5.4"
six = "~1.12.0"

# optional dependencies
# TODO fix aiobotocore/s3log:
# - we need aiobotocore<=0.11.1 because `get_session` (used in `s3log`) does not accept the
#   `loop` parameter in aiobotocore>0.11.1.
# - we need a more recent aiobotocore to have a more recent urllib3. Older urllib3 is causing
#   dependency issues with poetry>=1.2.0. We would need to fix `get_session` in the `s3log` code.
# aiobotocore = { version = "0.11.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">=3.6"
mock = "^4.0.3"

[tool.poetry.scripts]
gen3utils = "gen3utils.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
s3log = ["aiobotocore"]  # install with `poetry install -E s3log`
