[tool.poetry]
name = "gen3utils"
version = "0.11.0"
description = "Utils for Gen3 Commons management"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/gen3utils"

[tool.poetry.dependencies]
python = ">=3.13,<4"
cdislogging = ">=1,<2"
click = ">=8,<9"
dictionaryutils = "^4"
gen3datamodel = "^4"
aiobotocore = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6"
mock = "^4.0.3"
deptry = "^0.23.1"

[tool.poetry.scripts]
gen3utils = "gen3utils.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
